--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fastclick": "^1.0.6",
     "install": "^0.12.2",
     "npm": "^6.9.0",
+    "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
