--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "fastclick": "^1.0.6",
     "install": "^0.12.2",
     "npm": "^6.9.0",
